--- a/aether.example.yaml
+++ b/aether.example.yaml
@@ -1,117 +1,71 @@
-# Aether Configuration File
-# This is an example configuration file showing all available options with their defaults
-# Copy this to aether.yaml and customize as needed
+# Aether Configuration Example
+# Copy this file to aether.yaml and customize as needed
+# All settings shown here are the default values
 
-# Network mode: emulator, testnet, or mainnet
+# Network to use
 network: emulator
 
-# Flow blockchain configuration
+# Flow blockchain settings
 flow:
-  # Initial FLOW balance for newly created accounts
-  new_user_balance: 1000.0
-  # Block time for emulator (how often blocks are produced)
-  block_time: 1s
+  new_user_balance: 1000.0              # Initial balance for new accounts (FLOW tokens)
+  block_time: 1s                        # Block production time
+  init_transactions_folder: ""          # Subfolder to run init transactions from (empty = root aether folder)
+  init_transactions_interactive: false  # If true, prompt user to select folder at startup
 
-# Indexer configuration
+# Indexer settings for monitoring blockchain events
 indexer:
-  # How often to poll for new blocks
-  polling_interval: 200ms
-  
-  # Underflow data formatting options
+  polling_interval: 200ms       # How often to poll for new blocks
   underflow:
-    # Display byte arrays as hex strings
-    byte_array_as_hex: true
-    # Display Unix timestamps as human-readable dates
-    show_timestamps_as_date: true
-    # Format for displaying timestamps
-    timestamp_format: "2006-01-02 15:04:05 UTC"
+    byte_array_as_hex: true     # Display byte arrays as hex strings
+    show_timestamps_as_date: true  # Show timestamps in human-readable format
+    timestamp_format: "2006-01-02 15:04:05 UTC"  # Go time format string
 
-# Port configuration - all ports in one place to avoid conflicts
+# Port configurations
 ports:
-  # Flow emulator ports
   emulator:
-    grpc: 3569      # gRPC API
-    rest: 8888      # REST API
-    admin: 8080     # Admin API
-    debugger: 2345  # Debugger
-  
-  # Dev wallet port
-  dev_wallet: 8701
-  
-  # EVM gateway ports
+    grpc: 3569                  # Flow emulator gRPC port
+    rest: 8888                  # Flow emulator REST API port
+    admin: 8080                 # Flow emulator admin port
+    debugger: 2345              # Flow emulator debugger port
+  dev_wallet: 8701              # Dev wallet port
   evm:
-    rpc: 8545       # JSON-RPC API
-    profiler: 6060  # pprof profiler
-    metrics: 9091   # Prometheus metrics
+    rpc: 8545                   # EVM gateway JSON-RPC port
+    profiler: 6060              # EVM gateway profiler port
+    metrics: 9091               # EVM gateway metrics port
 
-# EVM gateway configuration
+# EVM gateway settings
 evm:
-  # Path to EVM gateway database
-  database_path: evm-gateway-db
-  # Delete database on startup (useful for development)
-  delete_database_on_start: true
+  database_path: "evm-gateway-db"  # Path to EVM gateway database
+  delete_database_on_start: true   # Clear database on startup
 
 # Logging configuration
 logging:
-  # Log levels per component
   level:
-    global: info        # Default level for all components
-    aether: info        # Main aether component (inherits global if not set)
-    emulator: info      # Flow emulator (inherits global if not set)
-    dev_wallet: info    # Dev wallet (inherits global if not set)
-    evm_gateway: error  # EVM gateway (defaults to error to reduce noise)
-  
-  # Timestamp format for log messages
-  timestamp_format: "15:04:05"
-  
-  # Enable colored output
-  color: true
-  
-  # File logging configuration
+    global: info                # Global log level (debug, info, warn, error)
+    aether: ""                  # Aether log level (empty = inherit global)
+    emulator: ""                # Emulator log level (empty = inherit global)
+    dev_wallet: ""              # Dev wallet log level (empty = inherit global)
+    evm_gateway: error          # EVM gateway log level
+  timestamp_format: "15:04:05"  # Time format for log timestamps
+  color: true                   # Enable colored output
   file:
-    enabled: false
-    path: ""
-    buffer_size: 1000
+    enabled: false              # Enable file logging
+    path: ""                    # Log file path (e.g., "aether.log")
+    buffer_size: 1000           # Log buffer size
 
-# UI configuration
+# UI preferences
 ui:
-  # Color theme: solarized, default, or custom
-  theme: solarized
-  
-  # History limits
   history:
-    max_transactions: 10000
-    max_events: 10000
-    max_log_lines: 10000
+    max_transactions: 10000     # Maximum transactions to keep in history
+    max_events: 10000           # Maximum events to keep in history
+    max_log_lines: 10000        # Maximum log lines to keep in history
   
-  # Layout configuration
   layout:
-    # Default view on startup: dashboard, transactions, events, or runner
-    default_view: dashboard
-    
-    # Transactions view split (percentages)
-    transactions:
-      table_width_percent: 40
-      detail_width_percent: 60
-    
-    # Events view split (percentages)
-    events:
-      table_width_percent: 60
-      detail_width_percent: 40
+    transactions_split_percent: 40  # Table width as percentage (0-100)
+    events_split_percent: 50        # Table width as percentage (0-100)
+    runner_split_percent: 40        # Table width as percentage (0-100)
   
-  # Default display modes
   defaults:
-    show_event_fields: false   # Show event field details by default
-    show_raw_addresses: false  # Show raw addresses vs friendly names
-    full_detail_mode: false    # Start in full detail mode
-  
-  # Filter settings
-  filter:
-    char_limit: 50
-    width: 50
-  
-  # Save dialog settings
-  save:
-    default_directory: transactions
-    filename_char_limit: 50
-    dialog_width: 40
+    show_event_fields: true     # Show event fields in transaction details
+    show_raw_addresses: false   # Show raw addresses instead of account names
+    time_format: "15:04:05"     # Time format for UI timestamps
