--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,34 +65,32 @@ jobs:
         with:
           path-to-profile: profile.cov
 
-  semantic-release:
+  release:
     runs-on: ubuntu-latest
     needs: [lint, tidy, test, coverage]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     permissions:
       contents: write
-      issues: write
-      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          persist-credentials: false
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Go
+        uses: actions/setup-go@v6
         with:
-          node-version: 'lts/*'
+          go-version: "1.25"
       
-      - name: Install semantic-release
+      - name: Install cross-compilation toolchain
         run: |
-          npm install -g semantic-release@24 \
-            @semantic-release/changelog@6 \
-            @semantic-release/git@10 \
-            @semantic-release/github@11
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
       
-      - name: Run semantic-release
+      - name: Run go-semantic-release with goreleaser
+        uses: go-semantic-release/action@v1
+        with:
+          hooks: goreleaser
+          force-bump-patch-version: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
