--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,11 +82,6 @@ jobs:
         with:
           go-version: "1.25"
       
-      - name: Install cross-compilation toolchain
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
-      
       - name: Run go-semantic-release with goreleaser
         uses: go-semantic-release/action@v1
         with:
@@ -94,3 +89,4 @@ jobs:
           force-bump-patch-version: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
