--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,45 +2,59 @@ version: 2
 
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
     - go mod download
 
 builds:
   - id: aether
-    main: .
     binary: aether
-    env:
-      - CGO_ENABLED=1
+    main: .
     goos:
-      - linux
       - darwin
+      - linux
+      - windows
     goarch:
       - amd64
       - arm64
+    env:
+      - CGO_CFLAGS=-O2 -D__BLST_PORTABLE__
+      - CGO_ENABLED=1
+      # Darwin
+      - CC_darwin_amd64=o64-clang
+      - CXX_darwin_amd64=o64-clang++
+      - CC_darwin_arm64=oa64-clang
+      - CXX_darwin_arm64=oa64-clang++
+      # Linux
+      - CC_linux_amd64=x86_64-linux-gnu-gcc
+      - CXX_linux_amd64=x86_64-linux-gnu-g++
+      - CC_linux_arm64=aarch64-linux-gnu-gcc
+      - CXX_linux_arm64=aarch64-linux-gnu-g++
+      # Windows (llvm-mingw toolchains)
+      - CC_windows_amd64=/llvm-mingw/bin/x86_64-w64-mingw32-gcc
+      - CXX_windows_amd64=/llvm-mingw/bin/x86_64-w64-mingw32-g++
+      - CC_windows_arm64=/llvm-mingw/bin/aarch64-w64-mingw32-gcc
+      - CXX_windows_arm64=/llvm-mingw/bin/aarch64-w64-mingw32-g++
+      - 'CC={{ index .Env (print "CC_" .Os "_" .Arch) }}'
+      - 'CXX={{ index .Env (print "CXX_" .Os "_" .Arch) }}'
+    flags:
+      - -mod=readonly
     ldflags:
       - -s -w
       - -X main.version={{.Version}}
       - -X main.commit={{.Commit}}
       - -X main.date={{.Date}}
-    # Skip darwin/arm64 cross-compilation (requires macOS runner)
-    ignore:
-      - goos: darwin
-        goarch: arm64
 
 archives:
   - id: aether
-    format: tar.gz
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    ids:
+      - aether
+    name_template: "{{ .ProjectName }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    formats:
+      - tar.gz
     format_overrides:
       - goos: windows
         format: zip
+    wrap_in_directory: false
     files:
       - README.md
       - LICENSE*
