--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,7 +65,7 @@ jobs:
         with:
           path-to-profile: profile.cov
 
-  release:
+  semantic-release:
     runs-on: ubuntu-latest
     needs: [lint, tidy, test, coverage]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
@@ -77,16 +77,8 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: "1.25"
-      
-      - name: Run go-semantic-release with goreleaser
+      - name: Run go-semantic-release
         uses: go-semantic-release/action@v1
         with:
-          hooks: goreleaser
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           force-bump-patch-version: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
