--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -45,38 +45,26 @@ builds:
       - -X main.date={{.Date}}
 
 archives:
-  - id: aether
-    format: binary
-    name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}{{ if eq .Os \"windows\" }}.exe{{ end }}"
+  - id: golang-cross
+    ids:
+      - aether
+    name_template: "{{ .ProjectName }}-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    formats:
+      - tar.gz
+    format_overrides:
+      - goos: windows
+        formats:
+          - zip
+    wrap_in_directory: false
 
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 
 snapshot:
   version_template: "{{ incpatch .Version }}-next"
 
 changelog:
-  sort: asc
-  use: github
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
-      - '^chore:'
-      - Merge pull request
-      - Merge branch
-  groups:
-    - title: 'New Features'
-      regexp: "^.*feat[(\\w)]*:+.*$"
-      order: 0
-    - title: 'Bug fixes'
-      regexp: "^.*fix[(\\w)]*:+.*$"
-      order: 10
-    - title: 'Performance improvements'
-      regexp: "^.*perf[(\\w)]*:+.*$"
-      order: 20
-    - title: Other work
-      order: 999
+  disable: true
 
 release:
   github:
@@ -84,8 +72,3 @@ release:
     name: aether
   draft: false
   prerelease: auto
-  mode: append
-  header: |
-    ## Aether {{ .Tag }} ({{ .Date }})
-    
-    Welcome to this new release of Aether!
